Fixed dialog issue on Safari

--- a/src/Bluent.UI/Styles/Components/_dialog.scss
+++ b/src/Bluent.UI/Styles/Components/_dialog.scss
@@ -30,7 +30,6 @@
         overflow: auto;
         padding: 24px;
         gap: 8px;
-        height: 100%;
         box-sizing: border-box;
 
         > .header {
