--- a/src/Bluent.UI/Styles/Components/components.css
+++ b/src/Bluent.UI/Styles/Components/components.css
@@ -1568,7 +1568,6 @@
   overflow: auto;
   padding: 24px;
   gap: 8px;
-  height: 100%;
   box-sizing: border-box;
 }
 .bui-dialog > .dialog-content > .header {
